--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,7 @@ body
     padding-left: 10px;
 }
 
+
 #frame 
 {
    padding: 0;
@@ -43,6 +44,36 @@ body
     position: absolute;
 }
 
+#up
+{
+    color: #fff;
+    background: #ff7500;
+    display: none;
+    position: fixed;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    bottom: 40%;
+    right: 2%;
+    z-index: 99;
+    padding: 10px 5px;
+    border-radius: 4px;
+    font-size: 18px;
+}
+
+#up:hover {
+    color: #fff;
+}
+
+.progress {
+    width: 100%;
+    height: 20px;
+}
+
+.progress-bar {
+    height:20px;
+    padding: 5px 5px 10px 5px;
+}
 
 .smed li i
 {
