--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,15 +2,24 @@ html {
   scroll-behavior: smooth;
 }
 
-body
-{
+body {
     margin: 0;
     padding: 0;
 }
 
-#navcontact
-{
+
+h4 {
+    font-size: 2em;
+    color: #262626;
+    font-weight: bold;
+}
+
+#navcontact {
     padding-left: 10px;
+}
+
+#mybrand {
+    color: #262626;
 }
 
 
@@ -33,9 +42,28 @@ body
 
 .card
 {
+    background-color: #fff;
     box-shadow: 5px 5px 5px 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
     padding: 10px;
+    align-items: center;
 }
+
+.circular-landscape {
+    display: inline-block;
+    position: relative;
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 4px solid #ffffff;
+}
+  
+.circular-landscape img {
+    width: 100%;
+    height: auto;
+    /* margin-left: -50px; */
+}
+
 
 #particles-js
 {
@@ -83,9 +111,18 @@ body
 
 .smed li i
 {
-    color: #fff;
+    color: #262626;
     margin: 10px;
     font-size: 15px;
+}
+
+.smed li a
+{
+    color: #262626;
+    margin: 10px;
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
 }
 
 footer
@@ -102,15 +139,16 @@ footer
 
 #footer-main .smed h2
 {
+    font-weight: 700;
     font-size: 40px;
     color: #fff;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 #footer-main .smed a i
 {
     margin: 10px;
-    padding: 10px;
+    /* padding: 10px; */
     font-size: 40px;
     color: #fff;
 }
