--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,7 +71,7 @@ h4 {
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #262626;
+    background: linear-gradient(90deg,#6360c6 0%,#1f6be4 100%);
     overflow: hidden;
     position: absolute;
 }
