UI mordernization with added carousel sliding

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,11 +7,21 @@ body {
     padding: 0;
 }
 
+h3 {
+    font-size: 2em;
+    font-weight: bold;
+}
+
 
 h4 {
     font-size: 2em;
     color: #262626;
     font-weight: bold;
+}
+
+
+h5 {
+    display: inline-block;
 }
 
 #navcontact {
@@ -48,6 +58,30 @@ h4 {
     align-items: center;
 }
 
+table {
+    border-bottom: 5px solid #2fb21d;
+}
+
+#acad-details {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#career-obj {
+    background-color: #FCCD04;
+    color: #000;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+
+#skills {
+    padding: 50px 0px;
+    width: 100%;
+    /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
+    background: #f6f6f6;
+}
+
 .circular-landscape {
     display: inline-block;
     position: relative;
@@ -76,10 +110,14 @@ h4 {
     position: absolute;
 }
 
+.nav {
+    text-align: center;
+}
+
 #up
 {
     color: #fff;
-    background: orange;
+    background: #2fb21d;
     display: none;
     position: fixed;
     cursor: pointer;
@@ -93,19 +131,24 @@ h4 {
     font-size: 18px;
 }
 
+
+#up .fas {
+    color: #fff;
+}
+
 #up:hover {
     color: #fff;
 }
 
 .progress {
     width: 100%;
-    height: 20px;
+    height: 30px;
 }
 
 .progress-bar {
     background-color: orange;
     color: white;
-    height:20px;
+    height: 30px;
     padding: 5px;
 }
 
@@ -123,6 +166,7 @@ h4 {
     font-size: 15px;
     font-weight: 500;
     text-decoration: none;
+
 }
 
 footer
@@ -179,3 +223,55 @@ footer
     font-size: 15px;
     color: #fff;
 }
+
+.tile {
+    background-color: #2fb21d;
+    box-shadow: 5px 5px 5px 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
+    padding: 15px 10px;
+    align-items: center;
+    height: 200px;
+    border-radius: 5px;
+    text-align: center;
+    max-width: 300px;
+}
+
+.carousel-item {
+    align-items: center;
+    text-align: center;
+    height: 220px;
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0.5px solid #fff;
+    width: 75%;
+
+}
+
+
+.fab {
+    color: #fff;
+}
+
+.fas {
+    color: #fff;
+}
+
+.fa-angle-right {
+    color: #272727;
+}
+
+.fa-trophy {
+    color: #ffa500;
+}
+
+.fa-money-check-alt {
+    color: #189900;
+}
+
+a {
+    color: #f96700;
+}
+
+
