--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,8 +38,7 @@ h5 {
    padding: 0;
    height: 767px;
    width: 100%;
-   /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
-   background: #f6f6f6;
+   background: #fff;
 }
 
 #card-container
@@ -68,7 +67,6 @@ table {
 }
 
 #career-obj {
-    background-color: #FCCD04;
     color: #000;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -78,8 +76,7 @@ table {
 #skills {
     padding: 50px 0px;
     width: 100%;
-    /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
-    background: #f6f6f6;
+    background: #ffffff;
 }
 
 .circular-landscape {
@@ -95,7 +92,6 @@ table {
 .circular-landscape img {
     width: 100%;
     height: auto;
-    /* margin-left: -50px; */
 }
 
 
@@ -147,7 +143,7 @@ table {
 
 .progress-bar {
     background-color: orange;
-    color: white;
+    color: #ffffff;
     height: 30px;
     padding: 5px;
 }
@@ -163,10 +159,15 @@ table {
 {
     color: #262626;
     margin: 10px;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 500;
     text-decoration: none;
 
+}
+
+.smed li a:hover
+{
+    color: #e42448;
 }
 
 footer
@@ -192,7 +193,6 @@ footer
 #footer-main .smed a i
 {
     margin: 10px;
-    /* padding: 10px; */
     font-size: 40px;
     color: #fff;
 }
@@ -200,20 +200,6 @@ footer
 #footer-main .smed a i:hover
 {
     color: #e42448;
-}
-
-#footer-main p a
-{
-    margin: 10px;
-    padding: 10px;
-    font-size: 20px;
-    color: #fff;
-}
-
-#footer-main p a:hover
-{
-    color: #00b7ff;
-    text-decoration: none;
 }
 
 #footer-main .ftext
@@ -267,11 +253,17 @@ hr {
 }
 
 .fa-money-check-alt {
-    color: #189900;
+    color: #2fb21d;
 }
 
 a {
-    color: #f96700;
+    color: #000000;
+}
+
+a:hover
+{
+    color: #2fb21d;
+    text-decoration: none;
 }
 
 
